# ThemeAudit

./: README.md  pyproject.toml
src/theme_audit/: autofix.py  cli.py  github_annotations.py  reporters.py  rules.py  sarif.py  scanner.py
