[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "themeaudit"
version = "0.1.0"
description = "Dependency-free Shopify theme performance + accessibility auditor (Markdown + SARIF)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["shopify", "theme", "audit", "performance", "a11y", "sarif", "core web vitals"]


